# detector

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
ads/: __init__.py  api.py  cli.py  service.py
ads/attribution/: __init__.py  base.py  cea_backend.py  dda_backend.py  toy_backend.py  trak_backend.py
ads/config/: __init__.py  loader.py  settings.py
ads/detector/: __init__.py  logistic.py  threshold.py
ads/eval/: __init__.py  calibration.py  ci.py  metrics.py  plots.py
ads/features/: __init__.py  density.py
ads/io/: __init__.py  jsonl.py
ads/report/: build_report.py
docs/: proposal_aligned_code_review.md
scripts/: build_controlled_dataset.py  build_features.py  build_stress_dataset.py  demo_end_to_end.sh  demo_stress_end_to_end.sh  evaluate_detector.py  export_demo_assets.py  finetune_small_model.py  generate_proposal_figure.py  run_attribution.py  run_experiments.py  train_detector.py  write_run_manifest.py
site/: .prettierignore  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
site/app/: globals.css  layout.tsx  page.tsx
tests/: test_api.py  test_attribution_schema.py  test_build_features_schema_compat.py  test_ci_and_calibration.py  test_dataset_builders.py  test_dda_backend_smoke.py  test_density.py  test_detector.py  test_evaluate_stress_analysis.py  test_experiment_runner_smoke.py  test_export_demo_assets.py  test_jsonl_io.py  test_metrics.py  test_optional_backends.py  test_run_manifest.py  test_service.py  test_toy_backend.py
(+59 files in other folders)
